<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/character_location_origin_title"
            android:textColor="@color/character_detail_value"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_name_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_name_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_origin_title"
            app:layout_constraintTop_toBottomOf="@+id/character_origin_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_origin_name_title"
            app:layout_constraintTop_toTopOf="@+id/character_origin_name_title"
            tools:text="Earth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_type_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_type_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_origin_name_title"
            app:layout_constraintTop_toBottomOf="@+id/character_origin_name_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_origin_type_title"
            app:layout_constraintTop_toTopOf="@+id/character_origin_type_title"
            tools:text="Planet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_dimension_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_dimension_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_origin_type_title"
            app:layout_constraintTop_toBottomOf="@+id/character_origin_type_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_origin_dimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_origin_dimension_title"
            app:layout_constraintTop_toTopOf="@+id/character_origin_dimension_title"
            tools:text="Dimension C-137" />

        <View
            android:id="@+id/separation_view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/character_detail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/character_origin_dimension" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/character_location_location_title"
            android:textColor="@color/character_detail_value"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separation_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_name_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_name_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_location_title"
            app:layout_constraintTop_toBottomOf="@+id/character_location_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_location_name_title"
            app:layout_constraintTop_toTopOf="@+id/character_location_name_title"
            tools:text="Earth" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_type_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_type_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_location_name_title"
            app:layout_constraintTop_toBottomOf="@+id/character_location_name_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_location_type_title"
            app:layout_constraintTop_toTopOf="@+id/character_location_type_title"
            tools:text="Planet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_dimension_title"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/character_location_dimension_title"
            android:textColor="@color/character_detail_title"
            app:layout_constraintStart_toStartOf="@+id/character_location_type_title"
            app:layout_constraintTop_toBottomOf="@+id/character_location_type_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/character_location_dimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/character_detail_value"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/character_location_dimension_title"
            app:layout_constraintTop_toTopOf="@+id/character_location_dimension_title"
            tools:text="Dimension Test" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>